--- a/src/pages/Main/styles/about.css
+++ b/src/pages/Main/styles/about.css
@@ -5,7 +5,7 @@
 }
 
 .card-icon{
-    @apply flex justify-center py-[1%] lg:py-0 lg:pt-4 rounded-[30px] w-full h-full max-w-14 max-h-16  text-3xl
+    @apply flex justify-center items-center py-[1%] lg:py-0 lg:pt-4 lg:items-start rounded-[30px] w-full h-full max-w-14 max-h-16  text-3xl
 }
 
 .card-text{
